fix bug with hubspot calendar widget
switch it from absolutely to relatively positioned

fixes bug where it would overlap the sticky secondary nav, and underlap
the footer

--- a/src/forms/css/objects/_honeycomb.forms.objects.hubspot.scss
+++ b/src/forms/css/objects/_honeycomb.forms.objects.hubspot.scss
@@ -62,6 +62,16 @@
     }
 }
 
+// Fix for calendar widget
+// Otherwise on www.red-gate.com it overlaps the sticky secondary nav, and underlaps the footer
+.hs-datepicker {
+    position: relative !important;
+
+    .pika-label {
+        position: static !important; 
+    }
+}
+
 @include responsive("small") {
   .hbspt-form .hs-form fieldset.form-columns-2 .hs-form-field { /* excessively specific to overwrite hubspot css */
     width: 100%;
